generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
  directUrl = env("DIRECT_URL")
}

enum UserStatus {
  ACTIVE
  SUSPENDED
  PENDING
  DELETED
}
enum ContentStatus {
  DRAFT
  PUBLISHED
  ARCHIVED
}
enum EnrollmentStatus {
  ACTIVE
  EXPIRED
  CANCELLED
  PENDING
}
enum LiveStatus {
  SCHEDULED
  LIVE
  COMPLETED
  CANCELLED
}
enum LeadStage {
  NEW
  CONTACTED
  DEMO_SCHEDULED
  DEMO_DONE
  PAYMENT_INTENT
  CONVERTED
  COLD
  LOST
}
enum JobStatus {
  PENDING
  RUNNING
  SUCCEEDED
  FAILED
  CANCELLED
}

model User {
  id String @id @default(uuid()) @db.Uuid
  authUserId String? @unique @map("auth_user_id")
  email String @unique
  fullName String @map("full_name")
  phone String?
  city String?
  status UserStatus @default(PENDING)
  lastLoginAt DateTime? @map("last_login_at")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
  deletedAt DateTime? @map("deleted_at")
  @@map("users")
}

model Role {
  id String @id @default(uuid()) @db.Uuid
  name String @unique
  description String?
  isSystem Boolean @default(false) @map("is_system")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
  @@map("roles")
}

model Permission {
  id String @id @default(uuid()) @db.Uuid
  key String @unique
  module String
  action String
  description String?
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
  @@map("permissions")
}

model UserRole {
  userId String @map("user_id") @db.Uuid
  roleId String @map("role_id") @db.Uuid
  assignedBy String? @map("assigned_by") @db.Uuid
  createdAt DateTime @default(now()) @map("created_at")
  @@id([userId, roleId])
  @@index([roleId])
  @@map("user_roles")
}

model Course {
  id String @id @default(uuid()) @db.Uuid
  slug String @unique
  title String
  status ContentStatus @default(DRAFT)
  level String?
  priceCents Int @default(0) @map("price_cents")
  createdBy String? @map("created_by") @db.Uuid
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
  deletedAt DateTime? @map("deleted_at")
  @@index([status])
  @@map("courses")
}

model Batch {
  id String @id @default(uuid()) @db.Uuid
  courseId String @map("course_id") @db.Uuid
  name String
  startsAt DateTime? @map("starts_at")
  endsAt DateTime? @map("ends_at")
  status ContentStatus @default(DRAFT)
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
  deletedAt DateTime? @map("deleted_at")
  @@index([courseId, status])
  @@map("batches")
}

model BatchStudent {
  id String @id @default(uuid()) @db.Uuid
  courseId String @map("course_id") @db.Uuid
  batchId String @map("batch_id") @db.Uuid
  userId String @map("user_id") @db.Uuid
  status EnrollmentStatus @default(ACTIVE)
  joinedAt DateTime @default(now()) @map("joined_at")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
  @@unique([batchId, userId])
  @@index([courseId, userId])
  @@map("batch_students")
}

model CourseModule {
  id String @id @default(uuid()) @db.Uuid
  courseId String @map("course_id") @db.Uuid
  title String
  sortOrder Int @default(0) @map("sort_order")
  status ContentStatus @default(DRAFT)
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
  deletedAt DateTime? @map("deleted_at")
  @@index([courseId, sortOrder])
  @@map("course_modules")
}

model Lesson {
  id String @id @default(uuid()) @db.Uuid
  courseId String @map("course_id") @db.Uuid
  moduleId String @map("module_id") @db.Uuid
  title String
  slug String
  type String
  contentMd String? @map("content_md")
  sortOrder Int @default(0) @map("sort_order")
  unlockRule Json? @map("unlock_rule")
  status ContentStatus @default(DRAFT)
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
  deletedAt DateTime? @map("deleted_at")
  @@unique([courseId, slug])
  @@index([courseId, moduleId, sortOrder])
  @@map("lessons")
}

model LessonVideo {
  id String @id @default(uuid()) @db.Uuid
  courseId String @map("course_id") @db.Uuid
  lessonId String @map("lesson_id") @db.Uuid
  provider String
  videoUrl String? @map("video_url")
  embedUrl String? @map("embed_url")
  durationSeconds Int? @map("duration_seconds")
  isProtected Boolean @default(true) @map("is_protected")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
  @@index([courseId, lessonId])
  @@map("lesson_videos")
}

model LessonResource {
  id String @id @default(uuid()) @db.Uuid
  courseId String @map("course_id") @db.Uuid
  lessonId String @map("lesson_id") @db.Uuid
  title String
  resourceType String @map("resource_type")
  storageKey String? @map("storage_key")
  url String?
  visibility String @default("enrolled")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
  deletedAt DateTime? @map("deleted_at")
  @@index([courseId, lessonId])
  @@map("lesson_resources")
}

model ProtectedDocument {
  id String @id @default(uuid()) @db.Uuid
  courseId String @map("course_id") @db.Uuid
  lessonId String? @map("lesson_id") @db.Uuid
  title String
  storageKey String @map("storage_key")
  pageCount Int @default(0) @map("page_count")
  status ContentStatus @default(DRAFT)
  watermarkPolicy Json? @map("watermark_policy")
  createdBy String? @map("created_by") @db.Uuid
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
  deletedAt DateTime? @map("deleted_at")
  @@index([courseId, lessonId])
  @@map("protected_documents")
}

model DocumentPageView {
  id String @id @default(uuid()) @db.Uuid
  courseId String @map("course_id") @db.Uuid
  documentId String @map("document_id") @db.Uuid
  userId String @map("user_id") @db.Uuid
  pageNumber Int @map("page_number")
  ip String?
  userAgent String? @map("user_agent")
  viewedAt DateTime @default(now()) @map("viewed_at")
  createdAt DateTime @default(now()) @map("created_at")
  @@index([courseId, viewedAt])
  @@index([userId, documentId])
  @@map("document_page_views")
}

model Enrollment {
  id String @id @default(uuid()) @db.Uuid
  courseId String @map("course_id") @db.Uuid
  batchId String? @map("batch_id") @db.Uuid
  userId String @map("user_id") @db.Uuid
  subscriptionId String? @map("subscription_id") @db.Uuid
  status EnrollmentStatus @default(PENDING)
  enrolledAt DateTime? @map("enrolled_at")
  expiresAt DateTime? @map("expires_at")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
  deletedAt DateTime? @map("deleted_at")
  @@index([courseId, status])
  @@index([userId, courseId, status])
  @@map("enrollments")
}

model SubscriptionPlan {
  id String @id @default(uuid()) @db.Uuid
  code String @unique
  name String
  scope String @default("platform")
  courseId String? @map("course_id") @db.Uuid
  priceCents Int @map("price_cents")
  currency String @default("INR")
  interval String @default("one_time")
  features Json?
  status ContentStatus @default(DRAFT)
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
  @@index([courseId, status])
  @@map("subscription_plans")
}

model Subscription {
  id String @id @default(uuid()) @db.Uuid
  userId String @map("user_id") @db.Uuid
  planId String @map("plan_id") @db.Uuid
  status String
  provider String @default("manual")
  providerSubscriptionId String? @map("provider_subscription_id")
  startsAt DateTime? @map("starts_at")
  endsAt DateTime? @map("ends_at")
  renewsAt DateTime? @map("renews_at")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
  @@index([userId, status])
  @@map("subscriptions")
}

model Payment {
  id String @id @default(uuid()) @db.Uuid
  userId String? @map("user_id") @db.Uuid
  courseId String? @map("course_id") @db.Uuid
  subscriptionId String? @map("subscription_id") @db.Uuid
  amountCents Int @map("amount_cents")
  currency String @default("INR")
  provider String @default("manual")
  providerPaymentId String? @unique @map("provider_payment_id")
  status String
  rawPayload Json? @map("raw_payload")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
  @@index([userId, status])
  @@index([courseId, status])
  @@map("payments")
}

model Coupon {
  id String @id @default(uuid()) @db.Uuid
  code String @unique
  courseId String? @map("course_id") @db.Uuid
  discountType String @map("discount_type")
  discountValue Int @map("discount_value")
  maxRedemptions Int? @map("max_redemptions")
  redeemedCount Int @default(0) @map("redeemed_count")
  startsAt DateTime? @map("starts_at")
  endsAt DateTime? @map("ends_at")
  status ContentStatus @default(DRAFT)
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
  @@index([courseId, status])
  @@map("coupons")
}

model LiveClass {
  id String @id @default(uuid()) @db.Uuid
  courseId String @map("course_id") @db.Uuid
  batchId String? @map("batch_id") @db.Uuid
  instructorId String @map("instructor_id") @db.Uuid
  title String
  provider String
  streamUrl String? @map("stream_url")
  embedUrl String? @map("embed_url")
  recordingUrl String? @map("recording_url")
  scheduledStart DateTime @map("scheduled_start")
  scheduledEnd DateTime @map("scheduled_end")
  joinOpenMinutesBefore Int @default(15) @map("join_open_minutes_before")
  status LiveStatus @default(SCHEDULED)
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
  deletedAt DateTime? @map("deleted_at")
  @@index([courseId, batchId, scheduledStart])
  @@map("live_classes")
}

model LiveClassAttendance {
  id String @id @default(uuid()) @db.Uuid
  courseId String @map("course_id") @db.Uuid
  batchId String? @map("batch_id") @db.Uuid
  liveClassId String @map("live_class_id") @db.Uuid
  userId String @map("user_id") @db.Uuid
  joinedAt DateTime? @map("joined_at")
  leftAt DateTime? @map("left_at")
  watchDurationSeconds Int @default(0) @map("watch_duration_seconds")
  ip String?
  device Json?
  attendanceStatus String @default("joined") @map("attendance_status")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
  @@index([liveClassId, userId])
  @@index([courseId, batchId])
  @@map("live_class_attendance")
}

model LiveViewerEvent {
  id String @id @default(uuid()) @db.Uuid
  courseId String @map("course_id") @db.Uuid
  batchId String? @map("batch_id") @db.Uuid
  liveClassId String @map("live_class_id") @db.Uuid
  userId String @map("user_id") @db.Uuid
  eventType String @map("event_type")
  eventPayload Json? @map("event_payload")
  ip String?
  createdAt DateTime @default(now()) @map("created_at")
  @@index([liveClassId, createdAt])
  @@index([courseId, batchId, createdAt])
  @@map("live_viewer_events")
}

model Quiz {
  id String @id @default(uuid()) @db.Uuid
  courseId String @map("course_id") @db.Uuid
  lessonId String @map("lesson_id") @db.Uuid
  title String
  passPercentage Int @default(70) @map("pass_percentage")
  maxAttempts Int @default(3) @map("max_attempts")
  status ContentStatus @default(DRAFT)
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
  deletedAt DateTime? @map("deleted_at")
  @@index([courseId, lessonId])
  @@map("quizzes")
}

model QuizQuestion {
  id String @id @default(uuid()) @db.Uuid
  courseId String @map("course_id") @db.Uuid
  quizId String @map("quiz_id") @db.Uuid
  type String
  prompt String
  options Json?
  correctAnswer Json? @map("correct_answer")
  explanation String?
  points Int @default(1)
  sortOrder Int @default(0) @map("sort_order")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
  @@index([quizId, sortOrder])
  @@index([courseId])
  @@map("quiz_questions")
}

model QuizAttempt {
  id String @id @default(uuid()) @db.Uuid
  courseId String @map("course_id") @db.Uuid
  quizId String @map("quiz_id") @db.Uuid
  userId String @map("user_id") @db.Uuid
  score Int @default(0)
  passed Boolean @default(false)
  answers Json?
  startedAt DateTime @default(now()) @map("started_at")
  submittedAt DateTime? @map("submitted_at")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
  @@index([courseId, userId, quizId])
  @@map("quiz_attempts")
}

model Assignment {
  id String @id @default(uuid()) @db.Uuid
  courseId String @map("course_id") @db.Uuid
  lessonId String @map("lesson_id") @db.Uuid
  title String
  instructions String
  dueAt DateTime? @map("due_at")
  maxScore Int @default(100) @map("max_score")
  status ContentStatus @default(DRAFT)
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
  deletedAt DateTime? @map("deleted_at")
  @@index([courseId, lessonId])
  @@map("assignments")
}

model AssignmentSubmission {
  id String @id @default(uuid()) @db.Uuid
  courseId String @map("course_id") @db.Uuid
  assignmentId String @map("assignment_id") @db.Uuid
  userId String @map("user_id") @db.Uuid
  content String?
  fileKey String? @map("file_key")
  score Int?
  feedback String?
  status String @default("submitted")
  submittedAt DateTime? @map("submitted_at")
  gradedAt DateTime? @map("graded_at")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
  @@index([courseId, assignmentId, userId])
  @@map("assignment_submissions")
}

model Lab {
  id String @id @default(uuid()) @db.Uuid
  courseId String @map("course_id") @db.Uuid
  lessonId String @map("lesson_id") @db.Uuid
  title String
  slug String
  accessTier String @default("paid") @map("access_tier")
  labMode String @default("manual") @map("lab_mode")
  dockerImage String? @map("docker_image")
  guideMd String? @map("guide_md")
  status ContentStatus @default(DRAFT)
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
  deletedAt DateTime? @map("deleted_at")
  @@unique([courseId, slug])
  @@index([courseId, lessonId])
  @@map("labs")
}

model LabSession {
  id String @id @default(uuid()) @db.Uuid
  courseId String @map("course_id") @db.Uuid
  labId String @map("lab_id") @db.Uuid
  userId String @map("user_id") @db.Uuid
  containerId String? @map("container_id")
  status String
  startedAt DateTime? @map("started_at")
  endedAt DateTime? @map("ended_at")
  expiresAt DateTime? @map("expires_at")
  metadata Json?
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
  @@index([courseId, userId, status])
  @@map("lab_sessions")
}

model LabAttempt {
  id String @id @default(uuid()) @db.Uuid
  courseId String @map("course_id") @db.Uuid
  labId String @map("lab_id") @db.Uuid
  userId String @map("user_id") @db.Uuid
  sessionId String? @map("session_id") @db.Uuid
  score Int @default(0)
  hintsUsed Int @default(0) @map("hints_used")
  status String
  startedAt DateTime? @map("started_at")
  completedAt DateTime? @map("completed_at")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
  @@index([courseId, userId, labId])
  @@map("lab_attempts")
}

model LabFlag {
  id String @id @default(uuid()) @db.Uuid
  courseId String @map("course_id") @db.Uuid
  labId String @map("lab_id") @db.Uuid
  name String
  flagHash String @map("flag_hash")
  points Int @default(1)
  hint String?
  sortOrder Int @default(0) @map("sort_order")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
  @@index([courseId, labId])
  @@map("lab_flags")
}

model ProgressEvent {
  id String @id @default(uuid()) @db.Uuid
  courseId String @map("course_id") @db.Uuid
  batchId String? @map("batch_id") @db.Uuid
  userId String @map("user_id") @db.Uuid
  entityType String @map("entity_type")
  entityId String? @map("entity_id") @db.Uuid
  eventType String @map("event_type")
  eventValue Decimal? @map("event_value")
  metadata Json?
  createdAt DateTime @default(now()) @map("created_at")
  @@index([courseId, userId, createdAt])
  @@index([courseId, batchId, createdAt])
  @@map("progress_events")
}

model ProgressSummary {
  id String @id @default(uuid()) @db.Uuid
  courseId String @map("course_id") @db.Uuid
  batchId String? @map("batch_id") @db.Uuid
  userId String @map("user_id") @db.Uuid
  lessonsCompleted Int @default(0) @map("lessons_completed")
  videosPercent Decimal @default(0) @map("videos_percent")
  labsCompleted Int @default(0) @map("labs_completed")
  quizAverage Decimal @default(0) @map("quiz_average")
  points Int @default(0)
  streakDays Int @default(0) @map("streak_days")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
  @@unique([courseId, batchId, userId])
  @@map("progress_summary")
}

model Leaderboard {
  id String @id @default(uuid()) @db.Uuid
  courseId String @map("course_id") @db.Uuid
  batchId String? @map("batch_id") @db.Uuid
  userId String @map("user_id") @db.Uuid
  rank Int
  points Int @default(0)
  labScore Int @default(0) @map("lab_score")
  quizScore Int @default(0) @map("quiz_score")
  streakScore Int @default(0) @map("streak_score")
  timeEfficiencyScore Int @default(0) @map("time_efficiency_score")
  period String @default("all_time")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
  @@index([courseId, batchId, period, rank])
  @@map("leaderboards")
}

model CertificateTemplate {
  id String @id @default(uuid()) @db.Uuid
  courseId String @map("course_id") @db.Uuid
  name String
  htmlTemplate String @map("html_template")
  config Json?
  status ContentStatus @default(DRAFT)
  createdBy String? @map("created_by") @db.Uuid
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
  deletedAt DateTime? @map("deleted_at")
  @@index([courseId, status])
  @@map("certificate_templates")
}

model Certificate {
  id String @id @default(uuid()) @db.Uuid
  courseId String @map("course_id") @db.Uuid
  userId String @map("user_id") @db.Uuid
  templateId String? @map("template_id") @db.Uuid
  certificateNumber String @unique @map("certificate_number")
  verificationHash String @unique @map("verification_hash")
  issuedAt DateTime @default(now()) @map("issued_at")
  revokedAt DateTime? @map("revoked_at")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
  @@index([courseId, userId])
  @@map("certificates")
}

model AiChatSession {
  id String @id @default(uuid()) @db.Uuid
  courseId String @map("course_id") @db.Uuid
  userId String @map("user_id") @db.Uuid
  title String?
  provider String @default("mock")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
  deletedAt DateTime? @map("deleted_at")
  @@index([courseId, userId])
  @@map("ai_chat_sessions")
}

model AiChatMessage {
  id String @id @default(uuid()) @db.Uuid
  courseId String @map("course_id") @db.Uuid
  sessionId String @map("session_id") @db.Uuid
  userId String @map("user_id") @db.Uuid
  role String
  content String
  citations Json?
  tokenCount Int? @map("token_count")
  safetyMetadata Json? @map("safety_metadata")
  createdAt DateTime @default(now()) @map("created_at")
  @@index([sessionId, createdAt])
  @@index([courseId, userId])
  @@map("ai_chat_messages")
}

model KnowledgeBaseDocument {
  id String @id @default(uuid()) @db.Uuid
  courseId String @map("course_id") @db.Uuid
  sourceType String @map("source_type")
  title String
  storageKey String? @map("storage_key")
  status String @default("pending")
  uploadedBy String? @map("uploaded_by") @db.Uuid
  ingestedAt DateTime? @map("ingested_at")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
  deletedAt DateTime? @map("deleted_at")
  @@index([courseId, status])
  @@map("knowledge_base_documents")
}

model DocumentChunk {
  id String @id @default(uuid()) @db.Uuid
  courseId String @map("course_id") @db.Uuid
  kbDocumentId String @map("kb_document_id") @db.Uuid
  chunkIndex Int @map("chunk_index")
  content String
  tokenCount Int? @map("token_count")
  metadata Json?
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
  @@unique([kbDocumentId, chunkIndex])
  @@index([courseId, kbDocumentId])
  @@map("document_chunks")
}

model Embedding {
  id String @id @default(uuid()) @db.Uuid
  courseId String @map("course_id") @db.Uuid
  chunkId String @map("chunk_id") @db.Uuid
  provider String
  model String
  embedding Unsupported("vector")?
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
  @@index([courseId])
  @@map("embeddings")
}

model Lead {
  id String @id @default(uuid()) @db.Uuid
  interestedCourseId String? @map("interested_course_id") @db.Uuid
  assignedOwnerId String? @map("assigned_owner_id") @db.Uuid
  name String
  email String
  phone String?
  city String?
  educationProfession String? @map("education_profession")
  sourcePage String @map("source_page")
  leadSource String @map("lead_source")
  message String?
  consentCheckbox Boolean @map("consent_checkbox")
  stage LeadStage @default(NEW)
  score Int @default(0)
  conversionStatus String @default("not_converted") @map("conversion_status")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
  deletedAt DateTime? @map("deleted_at")
  @@index([interestedCourseId, stage])
  @@index([email])
  @@map("leads")
}

model LeadNote {
  id String @id @default(uuid()) @db.Uuid
  leadId String @map("lead_id") @db.Uuid
  authorId String @map("author_id") @db.Uuid
  note String
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
  @@index([leadId])
  @@map("lead_notes")
}

model LeadFollowup {
  id String @id @default(uuid()) @db.Uuid
  leadId String @map("lead_id") @db.Uuid
  ownerId String @map("owner_id") @db.Uuid
  followUpAt DateTime @map("follow_up_at")
  status String @default("pending")
  outcome String?
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
  @@index([ownerId, status, followUpAt])
  @@map("lead_followups")
}

model SalesActivity {
  id String @id @default(uuid()) @db.Uuid
  leadId String @map("lead_id") @db.Uuid
  ownerId String? @map("owner_id") @db.Uuid
  activityType String @map("activity_type")
  outcome String?
  metadata Json?
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
  @@index([leadId, createdAt])
  @@map("sales_activities")
}

model MarketingCampaign {
  id String @id @default(uuid()) @db.Uuid
  name String
  source String?
  medium String?
  campaignCode String? @unique @map("campaign_code")
  startsAt DateTime? @map("starts_at")
  endsAt DateTime? @map("ends_at")
  budgetCents Int? @map("budget_cents")
  status ContentStatus @default(DRAFT)
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
  @@map("marketing_campaigns")
}

model AnalyticsEvent {
  id String @id @default(uuid()) @db.Uuid
  courseId String? @map("course_id") @db.Uuid
  batchId String? @map("batch_id") @db.Uuid
  userId String? @map("user_id") @db.Uuid
  leadId String? @map("lead_id") @db.Uuid
  eventType String @map("event_type")
  eventPayload Json? @map("event_payload")
  source String?
  ip String?
  userAgent String? @map("user_agent")
  createdAt DateTime @default(now()) @map("created_at")
  @@index([courseId, createdAt])
  @@index([eventType, createdAt])
  @@map("analytics_events")
}

model AuditLog {
  id String @id @default(uuid()) @db.Uuid
  actorUserId String? @map("actor_user_id") @db.Uuid
  courseId String? @map("course_id") @db.Uuid
  entityType String @map("entity_type")
  entityId String? @map("entity_id") @db.Uuid
  action String
  severity String @default("info")
  ip String?
  userAgent String? @map("user_agent")
  metadata Json?
  createdAt DateTime @default(now()) @map("created_at")
  @@index([actorUserId, createdAt])
  @@index([entityType, entityId])
  @@index([courseId, createdAt])
  @@map("audit_logs")
}

model Notification {
  id String @id @default(uuid()) @db.Uuid
  userId String @map("user_id") @db.Uuid
  courseId String? @map("course_id") @db.Uuid
  type String
  title String
  body String
  channel String @default("in_app")
  readAt DateTime? @map("read_at")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
  @@index([userId, readAt])
  @@map("notifications")
}

model SystemJob {
  id String @id @default(uuid()) @db.Uuid
  jobType String @map("job_type")
  status JobStatus @default(PENDING)
  payload Json
  attempts Int @default(0)
  lastError String? @map("last_error")
  runAfter DateTime? @map("run_after")
  lockedAt DateTime? @map("locked_at")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
  @@index([status, runAfter])
  @@map("system_jobs")
}
